--- a/_config.yml
+++ b/_config.yml
@@ -193,6 +193,11 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+  - _news/announcement_*.md
+  - _pages/blog.md
+  - _posts/
+  - _projects/?_project.md
+  - _pages/publications.md
 keep_files:
   - CNAME
   - .nojekyll
