About and photo update

--- a/_config.yml
+++ b/_config.yml
@@ -193,13 +193,13 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
-  - _news/announcement_*.md ## I removed these for my needs
+  - _news/announcement_*.md # I removed these for my needs
   - _pages/blog.md
   - _posts/
   - _projects/?_project.md
   - _pages/publications.md
   - _pages/teaching.md
-  - _pages/profiles.md
+  - _pages/profiles.md #Prime target to convert into model painting page
   - _pages/dropdown.md
   - _pages/repositories.md
 
