--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: David's Portfolio # the website title (if blank, full name will be used instead)
+title: David Ripley # the website title (if blank, full name will be used instead)
 first_name: David
 middle_name: 
 last_name: Ripley
