--- a/_data/socials.yml
+++ b/_data/socials.yml
@@ -20,7 +20,7 @@ email: Dripley404@Gmail.com # your email address
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-linkedin_username: David-Ripley # your LinkedIn user name
+linkedin_username: david-ripley-b4a97b236 # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 # orcid_id: # your ORCID ID
